--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,4 +13,7 @@ License: GNU GPLv3
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.5.0), rJava (>= 0.9-1)
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
